# projects

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/01.hangman/: AttemptHandler.cpp  AttemptHandler.h  CMakeLists.txt  DisplayHandler.h  hangman_main.cpp
cpp/02.hs_game/: CMakeLists.txt  hs_game_main.cpp
cpp/03.snakii_game/: Bait.h  Snake.h  snakii_game_main.cpp
cpp/libraries/: CMakeLists.txt
cpp/programs/: CMakeLists.txt
cpp/programs/01.hangman/: DisplayHandler.cpp
cpp/programs/03.snakii_game/: BaitFactory.h  CMakeLists.txt  DerivedBaits.h
